--- a/precos.html
+++ b/precos.html
@@ -13,7 +13,7 @@
 
     <div class="cabecalho">
         <div class="navbar">
-            <h3>PLACEHOLDERMATHEUS</h3>
+            <h3>Novas Tecnologias</h3>
 
             <div class="opcoes">
                 <ul>
