--- a/Site.html
+++ b/Site.html
@@ -20,6 +20,7 @@
                         <li><a href="comoFunciona.html">Como Funciona</a></li>
                         <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
                         <li><a href="precos.html">Preços</a></li>
+                        <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                     </ul>
                 </div>
         </div>
@@ -41,4 +42,6 @@
     <p>Matheus Marques</p>
 </div>
 </body>
+
+<script src="energiaSolar.js"></script>
 </html>
