--- a/fluxogramas.html
+++ b/fluxogramas.html
@@ -30,30 +30,14 @@
     </div>
 
     <div class="corpo flex">
-        <div class="esquerda">
-            <img src="capa 7.jpg" style="height: 348px; width: 429px; margin-bottom: 10em; ;">
-            <img src="Celular.jpg" style="height: 428px; width: 429px;">
-        </div>
-        <div class="direita">
-            <h3>Apresentação</h3>
-            <span>Neste site mostraremos um pouco do nosso mais novo produto, como ja dito no inicio do site, uma capa
-                de celular que recarrega o próprio com energia solar.<br> <br> após muitos processos de pesquisas e
-                analises
-                conseguimos enfim criar um protótipo capaz de se recarregar automaticamente quando usado mesmo que longe
-                de tomadas ou utensilhos de eletricidade. <br> <br> O que por si só ja é um avanço mais do que
-                significativo tanto
-                para o meio tecnologico quanto para a humanidade de forma geral <br> <br> trazendo versatilidade para os
-                meios tecnologias mais usados no mundo e a cima de tudo ajudando o meio ambiente
-            </span>
+        <div class="meio">
+            <img src="Github fluxograma.PNG" style="height: 900px; width: 900px;" aling="middle">
+            <img src="Netfly fluxograma.PNG" style="height: 900px; width: 850px;" aling="middle">
         </div>
 
 
-    </div>
-
-    <div class="footer">
-        <p>Diego Souza</p>
-    </div>
 </body>
+
 <script src="energiaSolar.js"></script>
 
 </html>
