--- a/precos.html
+++ b/precos.html
@@ -21,7 +21,9 @@
                     <li><a href="apresentacao.html">Apresentação</a></li>
                     <li><a href="comoFunciona.html">Como Funciona</a></li>
                     <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
-                    <li><a href="precos.html" class="active">Preços</a></li>
+                    <li><a href="precos.html">Preços</a></li>
+                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                 </ul>
             </div>
         </div>
@@ -53,5 +55,7 @@
         <p>Diego Souza</p>
     </div>
 </body>
+
+<script src="energiaSolar.js"></script>
 
 </html>
