--- a/OqueVaiMudar.html
+++ b/OqueVaiMudar.html
@@ -20,8 +20,10 @@
                     <li><a href="Site.html">Inicio</a></li>
                     <li><a href="apresentacao.html">Apresentação</a></li>
                     <li><a href="comoFunciona.html">Como Funciona</a></li>
-                    <li><a href="oqueVaiMudar.html" class="active">O que vai mudar</a></li>
+                    <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
                     <li><a href="precos.html">Preços</a></li>
+                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +33,7 @@
         <div class="esquerda">
             <img src="Solar 1.jpg" style="height: 348px; width: 429px; margin-bottom: 10em; ;">
             <img src="Solar 2.jpg" style="height: 428px; width: 429px;">
-        </div>
+    </div>
         <div class="direita">
             <h3>O que vai mudar na vida das pessoas</h3>
             <span>
@@ -53,5 +55,6 @@
         <p>Matheus Marques</p>
     </div>
 </body>
+<script src="energiaSolar.js"></script>
 
 </html>
