--- a/Site.html
+++ b/Site.html
@@ -13,16 +13,17 @@
         <div class="navbar">
             <h3>Novas Tecnologias</h3>
 
-                <div class="opcoes">
-                    <ul>
-                        <li><a href="Início.html" class="active">Inicio</a></li>
-                        <li><a href="apresentacao.html">Apresentação</a></li>
-                        <li><a href="comoFunciona.html">Como Funciona</a></li>
-                        <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
-                        <li><a href="precos.html">Preços</a></li>
-                        <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
-                    </ul>
-                </div>
+            <div class="opcoes">
+                <ul>
+                    <li><a href="Site.html">Inicio</a></li>
+                    <li><a href="apresentacao.html">Apresentação</a></li>
+                    <li><a href="comoFunciona.html">Como Funciona</a></li>
+                    <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
+                    <li><a href="precos.html">Preços</a></li>
+                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
