--- a/comoFunciona.html
+++ b/comoFunciona.html
@@ -19,9 +19,11 @@
                 <ul>
                     <li><a href="Site.html">Inicio</a></li>
                     <li><a href="apresentacao.html">Apresentação</a></li>
-                    <li><a href="comoFunciona.html" class="active">Como Funciona</a></li>
+                    <li><a href="comoFunciona.html">Como Funciona</a></li>
                     <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
                     <li><a href="precos.html">Preços</a></li>
+                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                 </ul>
             </div>
         </div>
@@ -53,5 +55,6 @@
         <p>Bernardo Fogaça</p>
     </div>
 </body>
+<script src="energiaSolar.js"></script>
 
 </html>
