--- a/precos.html
+++ b/precos.html
@@ -17,12 +17,12 @@
 
             <div class="opcoes">
                 <ul>
-                    <li><a href="Site.html">Inicio</a></li>
+                    <li><a href="inicio.html">Inicio</a></li>
                     <li><a href="apresentacao.html">Apresentação</a></li>
                     <li><a href="comoFunciona.html">Como Funciona</a></li>
                     <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
-                    <li><a href="precos.html">Preços</a></li>
-                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="precos.html" class="active">Preços</a></li>
+                    <li><a href="fluxogramas.html" >Fluxogramas</a></li>
                     <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                 </ul>
             </div>
