--- a/inicio.html
+++ b/inicio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Novas tecnologias</title>
     <link rel="stylesheet" href="site.css">
 </head>
-
 <body>
 
     <div class="cabecalho">
@@ -17,27 +15,34 @@
 
             <div class="opcoes">
                 <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="inicio.html" class="active">Inicio</a></li>
                     <li><a href="apresentacao.html">Apresentação</a></li>
                     <li><a href="comoFunciona.html">Como Funciona</a></li>
                     <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
                     <li><a href="precos.html">Preços</a></li>
-                    <li><a href="fluxogramas.html" class="active">Fluxogramas</a></li>
+                    <li><a href="fluxogramas.html" >Fluxogramas</a></li>
                     <li><a href="javascript:void(0)" id="linkEnergiaSolar">Energia Solar e Adversos</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="corpo flex">
-        <div class="meio">
-            <img src="Github fluxograma.PNG" style="height: 900px; width: 900px;" aling="middle">
-            <img src="Netfly fluxograma.PNG" style="height: 900px; width: 850px;" aling="middle">
-        </div>
+<div class="corpo bg">
+
+</div>
+<div class="titulo">
+    <div>
+        <h2>Novas Tecnologias</h2>
+        <h4>Capa de celular recarregada com energia solar</h4>
+    </div>
 
 
+</div>
+    
+<div class="footer">
+    <p>Matheus Marques</p>
+</div>
 </body>
 
 <script src="energiaSolar.js"></script>
-
 </html>
