--- a/apresentacao.html
+++ b/apresentacao.html
@@ -17,7 +17,7 @@
 
             <div class="opcoes">
                 <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="apresentacao.html" class="active">Apresentação</a></li>
                     <li><a href="comoFunciona.html">Como Funciona</a></li>
                     <li><a href="oqueVaiMudar.html">O que vai mudar</a></li>
